--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,183 +1,2 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>TestNG:  Unit Test</title>
-<style type="text/css">
-table caption,table.info_table,table.result,table.passed,table.failed {margin-bottom:10px;border:1px solid #000099;border-collapse:collapse;empty-cells:show;}
-table.info_table td,table.info_table th,table.result td,table.result th,table.passed td,table.passed th,table.failed td,table.failed th {
-border:1px solid #000099;padding:.25em .5em .25em .5em
-}
-table.result th {vertical-align:bottom}
-tr.param th {padding-left:1em;padding-right:1em}
-tr.param td {padding-left:.5em;padding-right:2em}
-td.numi,th.numi,td.numi_attn {
-text-align:right
-}
-tr.total td {font-weight:bold}
-table caption {
-text-align:center;font-weight:bold;
-}
-table.passed tr.stripe td,table tr.passedodd td {background-color: #00AA00;}
-table.passed td,table tr.passedeven td {background-color: #33FF33;}
-table.passed tr.stripe td,table tr.skippedodd td {background-color: #cccccc;}
-table.passed td,table tr.skippedodd td {background-color: #dddddd;}
-table.failed tr.stripe td,table tr.failedodd td,table.result td.numi_attn {background-color: #FF3333;}
-table.failed td,table tr.failedeven td,table.result tr.stripe td.numi_attn {background-color: #DD0000;}
-tr.stripe td,tr.stripe th {background-color: #E6EBF9;}
-p.totop {font-size:85%;text-align:center;border-bottom:2px black solid}
-div.shootout {padding:2em;border:3px #4854A8 solid}
-</style>
-</head>
-<body>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0</td><td class="numi">47.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-</table>
-<table cellspacing="0" cellpadding="0" class="passed" id="summary">
-<tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr>
-<tr class="failedodd"><td rowspan="1">testcases.Data_Validation_Test1</td><td><a href="#m1"><b>setUp</b>  </a></td><td class="numi">1</td><td>1478590518343</td><td class="numi">0</td></tr>
-<tr><th colspan="4">Default test &#8212; skipped (configuration methods)</th></tr>
-<tr class="skippedodd"><td rowspan="1">testcases.Data_Validation_Test1</td><td><a href="#m2"><b>tearDown</b>  </a></td><td class="numi">1</td><td>1478590565522</td><td class="numi">0</td></tr>
-<tr><th colspan="4">Default test &#8212; skipped</th></tr>
-<tr class="skippedodd"><td rowspan="1">testcases.Data_Validation_Test1</td><td><a href="#m3"><b>testDataValidation</b>  </a></td><td class="numi">1</td><td>1478590565519</td><td class="numi">2</td></tr>
-</table>
-<h1>Default test</h1>
-<h2 id="m1">testcases.Data_Validation_Test1:setUp</h2>
-<div style="padding-left:3em">
-<p>Failed to connect to binary FirefoxBinary(C:\Program Files (x86)\Mozilla Firefox\firefox.exe) on port 7055; process output follows: 
-can of {972ce4c6-7e08-4474-a285-3208198ce6fd}
-1478590520088	DeferredSave.extensions.json	DEBUG	Save changes
-1478590520089	addons.xpi	DEBUG	Updating database with changes to installed add-ons
-1478590520089	addons.xpi-utils	DEBUG	Updating add-on states
-1478590520090	addons.xpi-utils	DEBUG	Writing add-ons list
-1478590520094	addons.xpi	DEBUG	Registering manifest for C:\Program Files (x86)\Mozilla Firefox\browser\features\e10srollout@mozilla.org.xpi
-1478590520095	addons.xpi	DEBUG	Calling bootstrap method startup on e10srollout@mozilla.org version 1.3
-1478590520095	addons.xpi	DEBUG	Registering manifest for C:\Program Files (x86)\Mozilla Firefox\browser\features\firefox@getpocket.com.xpi
-1478590520096	addons.xpi	DEBUG	Calling bootstrap method startup on firefox@getpocket.com version 1.0.4
-1478590520097	addons.xpi	DEBUG	Registering manifest for C:\Program Files (x86)\Mozilla Firefox\browser\features\webcompat@mozilla.org.xpi
-1478590520098	addons.xpi	DEBUG	Calling bootstrap method startup on webcompat@mozilla.org version 1.0
-1478590520100	addons.manager	DEBUG	Registering shutdown blocker for XPIProvider
-1478590520100	addons.manager	DEBUG	Provider finished startup: XPIProvider
-1478590520100	addons.manager	DEBUG	Starting provider: LightweightThemeManager
-1478590520100	addons.manager	DEBUG	Registering shutdown blocker for LightweightThemeManager
-1478590520101	addons.manager	DEBUG	Provider finished startup: LightweightThemeManager
-1478590520101	addons.manager	DEBUG	Starting provider: GMPProvider
-1478590520109	addons.manager	DEBUG	Registering shutdown blocker for GMPProvider
-1478590520109	addons.manager	DEBUG	Provider finished startup: GMPProvider
-1478590520109	addons.manager	DEBUG	Starting provider: PluginProvider
-1478590520110	addons.manager	DEBUG	Registering shutdown blocker for PluginProvider
-1478590520110	addons.manager	DEBUG	Provider finished startup: PluginProvider
-1478590520110	addons.manager	DEBUG	Completed startup sequence
-1478590522106	DeferredSave.extensions.json	DEBUG	Starting write
-1478590522117	addons.manager	DEBUG	Starting provider: &lt;unnamed-provider&gt;
-1478590522118	addons.manager	DEBUG	Registering shutdown blocker for &lt;unnamed-provider&gt;
-1478590522118	addons.manager	DEBUG	Provider finished startup: &lt;unnamed-provider&gt;
-1478590522334	addons.repository	DEBUG	No addons.json found.
-1478590522334	DeferredSave.addons.json	DEBUG	Save changes
-1478590522339	DeferredSave.addons.json	DEBUG	Starting timer
-1478590522382	addons.manager	DEBUG	Starting provider: PreviousExperimentProvider
-1478590522383	addons.manager	DEBUG	Registering shutdown blocker for PreviousExperimentProvider
-1478590522384	addons.manager	DEBUG	Provider finished startup: PreviousExperimentProvider
-1478590522386	DeferredSave.extensions.json	DEBUG	Write succeeded
-1478590522388	addons.xpi-utils	DEBUG	XPI Database saved, setting schema version preference to 17
-1478590522392	DeferredSave.addons.json	DEBUG	Starting write
-1478590522417	DeferredSave.addons.json	DEBUG	Write succeeded
-1478590530697	addons.xpi	DEBUG	Calling bootstrap method shutdown on e10srollout@mozilla.org version 1.3
-1478590530698	addons.xpi	DEBUG	Calling bootstrap method shutdown on firefox@getpocket.com version 1.0.4
-1478590530699	addons.xpi	DEBUG	Calling bootstrap method shutdown on webcompat@mozilla.org version 1.0
-1478590531009	addons.manager	DEBUG	shutdown
-1478590531009	addons.manager	DEBUG	Calling shutdown blocker for XPIProvider
-1478590531009	addons.xpi	DEBUG	shutdown
-1478590531009	addons.xpi-utils	DEBUG	shutdown
-1478590531010	addons.manager	DEBUG	Calling shutdown blocker for LightweightThemeManager
-1478590531011	addons.manager	DEBUG	Calling shutdown blocker for GMPProvider
-1478590531014	addons.manager	DEBUG	Calling shutdown blocker for PluginProvider
-1478590531015	addons.manager	DEBUG	Calling shutdown blocker for &lt;unnamed-provider&gt;
-1478590531017	addons.manager	DEBUG	Calling shutdown blocker for PreviousExperimentProvider
-1478590531020	addons.xpi	DEBUG	Notifying XPI shutdown observers
-1478590531023	addons.manager	DEBUG	Async provider shutdown done
-
-Build info: version: &apos;2.53.1&apos;, revision: &apos;a36b8b1cd5757287168e54b817830adce9b0158d&apos;, time: &apos;2016-06-30 19:26:09&apos;
-System info: host: &apos;DESKTOP-O4G2OQC&apos;, ip: &apos;192.168.1.57&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_101&apos;
-Driver info: driver.version: FirefoxDriver</p>
-org.openqa.selenium.firefox.internal.NewProfileExtensionConnection.start(NewProfileExtensionConnection.java:125)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.startClient(FirefoxDriver.java:271)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:119)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:216)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:211)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:207)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:120)
-<br/>at factory.BrowserFactory.getBrowser(BrowserFactory.java:20)
-<br/>at testcases.Data_Validation_Test1.setUp(Data_Validation_Test1.java:39)
-<br/>27 lines not shown
-<p>Caused by Unable to connect to host 127.0.0.1 on port 7055 after 45000 ms. Firefox console output:
-can of {972ce4c6-7e08-4474-a285-3208198ce6fd}
-1478590520088	DeferredSave.extensions.json	DEBUG	Save changes
-1478590520089	addons.xpi	DEBUG	Updating database with changes to installed add-ons
-1478590520089	addons.xpi-utils	DEBUG	Updating add-on states
-1478590520090	addons.xpi-utils	DEBUG	Writing add-ons list
-1478590520094	addons.xpi	DEBUG	Registering manifest for C:\Program Files (x86)\Mozilla Firefox\browser\features\e10srollout@mozilla.org.xpi
-1478590520095	addons.xpi	DEBUG	Calling bootstrap method startup on e10srollout@mozilla.org version 1.3
-1478590520095	addons.xpi	DEBUG	Registering manifest for C:\Program Files (x86)\Mozilla Firefox\browser\features\firefox@getpocket.com.xpi
-1478590520096	addons.xpi	DEBUG	Calling bootstrap method startup on firefox@getpocket.com version 1.0.4
-1478590520097	addons.xpi	DEBUG	Registering manifest for C:\Program Files (x86)\Mozilla Firefox\browser\features\webcompat@mozilla.org.xpi
-1478590520098	addons.xpi	DEBUG	Calling bootstrap method startup on webcompat@mozilla.org version 1.0
-1478590520100	addons.manager	DEBUG	Registering shutdown blocker for XPIProvider
-1478590520100	addons.manager	DEBUG	Provider finished startup: XPIProvider
-1478590520100	addons.manager	DEBUG	Starting provider: LightweightThemeManager
-1478590520100	addons.manager	DEBUG	Registering shutdown blocker for LightweightThemeManager
-1478590520101	addons.manager	DEBUG	Provider finished startup: LightweightThemeManager
-1478590520101	addons.manager	DEBUG	Starting provider: GMPProvider
-1478590520109	addons.manager	DEBUG	Registering shutdown blocker for GMPProvider
-1478590520109	addons.manager	DEBUG	Provider finished startup: GMPProvider
-1478590520109	addons.manager	DEBUG	Starting provider: PluginProvider
-1478590520110	addons.manager	DEBUG	Registering shutdown blocker for PluginProvider
-1478590520110	addons.manager	DEBUG	Provider finished startup: PluginProvider
-1478590520110	addons.manager	DEBUG	Completed startup sequence
-1478590522106	DeferredSave.extensions.json	DEBUG	Starting write
-1478590522117	addons.manager	DEBUG	Starting provider: &lt;unnamed-provider&gt;
-1478590522118	addons.manager	DEBUG	Registering shutdown blocker for &lt;unnamed-provider&gt;
-1478590522118	addons.manager	DEBUG	Provider finished startup: &lt;unnamed-provider&gt;
-1478590522334	addons.repository	DEBUG	No addons.json found.
-1478590522334	DeferredSave.addons.json	DEBUG	Save changes
-1478590522339	DeferredSave.addons.json	DEBUG	Starting timer
-1478590522382	addons.manager	DEBUG	Starting provider: PreviousExperimentProvider
-1478590522383	addons.manager	DEBUG	Registering shutdown blocker for PreviousExperimentProvider
-1478590522384	addons.manager	DEBUG	Provider finished startup: PreviousExperimentProvider
-1478590522386	DeferredSave.extensions.json	DEBUG	Write succeeded
-1478590522388	addons.xpi-utils	DEBUG	XPI Database saved, setting schema version preference to 17
-1478590522392	DeferredSave.addons.json	DEBUG	Starting write
-1478590522417	DeferredSave.addons.json	DEBUG	Write succeeded
-1478590530697	addons.xpi	DEBUG	Calling bootstrap method shutdown on e10srollout@mozilla.org version 1.3
-1478590530698	addons.xpi	DEBUG	Calling bootstrap method shutdown on firefox@getpocket.com version 1.0.4
-1478590530699	addons.xpi	DEBUG	Calling bootstrap method shutdown on webcompat@mozilla.org version 1.0
-1478590531009	addons.manager	DEBUG	shutdown
-1478590531009	addons.manager	DEBUG	Calling shutdown blocker for XPIProvider
-1478590531009	addons.xpi	DEBUG	shutdown
-1478590531009	addons.xpi-utils	DEBUG	shutdown
-1478590531010	addons.manager	DEBUG	Calling shutdown blocker for LightweightThemeManager
-1478590531011	addons.manager	DEBUG	Calling shutdown blocker for GMPProvider
-1478590531014	addons.manager	DEBUG	Calling shutdown blocker for PluginProvider
-1478590531015	addons.manager	DEBUG	Calling shutdown blocker for &lt;unnamed-provider&gt;
-1478590531017	addons.manager	DEBUG	Calling shutdown blocker for PreviousExperimentProvider
-1478590531020	addons.xpi	DEBUG	Notifying XPI shutdown observers
-1478590531023	addons.manager	DEBUG	Async provider shutdown done
-</p>
-org.openqa.selenium.firefox.internal.NewProfileExtensionConnection.start(NewProfileExtensionConnection.java:113)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.startClient(FirefoxDriver.java:271)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:119)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:216)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:211)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:207)
-<br/>at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:120)
-<br/>at factory.BrowserFactory.getBrowser(BrowserFactory.java:20)
-<br/>at testcases.Data_Validation_Test1.setUp(Data_Validation_Test1.java:39)
-<br/>27 lines not shown
-</div>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">testcases.Data_Validation_Test1:tearDown</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">testcases.Data_Validation_Test1:testDataValidation</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-</body></html>
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">18,197</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.Data_Validation_Test1</td><td><a href="#m0">testDataValidation</a></td><td rowspan="1">1479453904369</td><td rowspan="1">7385</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">testcases.Data_Validation_Test1#testDataValidation</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
