--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>16/11/08 13:05:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Data_Validation_Test1.setUp()[pri:0, instance:testcases.Data_Validation_Test1@46d56d67]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>16/11/08 13:06:05</td>   <td>47175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_Validation_Test1.testDataValidation()[pri:0, instance:testcases.Data_Validation_Test1@46d56d67]">testDataValidation</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>16/11/18 12:54:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Data_Validation_Test1.setUp()[pri:0, instance:testcases.Data_Validation_Test1@7dc7cbad]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>16/11/18 12:55:11</td>   <td>16178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Data_Validation_Test1.tearDown(org.testng.ITestResult)[pri:0, instance:testcases.Data_Validation_Test1@7dc7cbad]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>16/11/18 12:55:04</td>   <td>8791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_Validation_Test1.testDataValidation()[pri:0, instance:testcases.Data_Validation_Test1@7dc7cbad]">testDataValidation</td> 
+  <td>main@2107447833</td>   <td></td> </tr>
 </table>
